//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Ong {
  id Int [pk, increment]
  name String [unique, not null]
  email String [unique, not null]
  password String [not null]
  description String [not null]
  contactPhone String
  instagramLink String
  facebookLink String
  site String
  logoPhotoUrl String
  challenges Challenge [not null]
}

Table SchoolManager {
  id Int [pk, increment]
  fullName String [not null]
  phoneNumber String
  email String [unique, not null]
  password String [not null]
  schoolName String [not null]
  teachingStages TeachingStage[] [not null]
  inepCode String [unique, not null]
  cep String [not null]
  address String [not null]
  addressNumber String [not null]
  addressComplement String
  schoolImageUrl String
  schoolChallenges Challenge [not null]
}

Table Challenge {
  id Int [pk, increment]
  title String [not null]
  description String [not null]
  startDate DateTime [not null]
  endDate DateTime [not null]
  idealAge TeachingStage[] [not null]
  neededResources String [not null]
  category ChallengeCategory [not null]
  documentUrls String[] [not null]
  status ChallengeStatus [not null, default: 'PENDING']
  ongId Int [not null]
  managerId Int
  ong Ong [not null]
  schoolManager SchoolManager
  checkpoints Checkpoint [not null]
}

Table Checkpoint {
  id Int [pk, increment]
  title String [not null]
  description String
  photoUrl String
  completionDate DateTime
  checkpointNumber Int [not null]
  challengeId Int [not null]
  challenge Challenge [not null]

  indexes {
    (challengeId, checkpointNumber) [unique]
  }
}

Enum TeachingStage {
  EDUCACAO_INFANTIL
  ENSINO_FUNDAMENTAL_I
  ENSINO_FUNDAMENTAL_II
  ENSINO_MEDIO
}

Enum ChallengeCategory {
  EDUCACAO
  MEIO_AMBIENTE
  SAUDE
  CULTURA
  ESPORTE
  TECNOLOGIA
  CIDADANIA
  INCLUSAO
  OUTRO
}

Enum ChallengeStatus {
  PENDING
  IN_PROGRESS
  COMPLETED
}

Ref: Challenge.ongId > Ong.id

Ref: Challenge.managerId > SchoolManager.id

Ref: Checkpoint.challengeId > Challenge.id